HTML-Dummies zum Funktionen testen

--- a/views/register.html
+++ b/views/register.html
@@ -1,1 +1,25 @@
 <!--TODO Prototyp-->
+<!DOCTYPE html>
+<html>
+
+    <head>
+        <title>LettuceRegister</title> 
+    </head>
+
+    <body>
+        <header class="header">
+            <h2>Register</h2>
+        </header>
+        <div class="main">
+            <form action="/newuser" method="POST">
+                <table>
+                    <tr> <td>Username:</td> <td><input type="text" name="usernameInput"> </td> </tr>
+                    <tr> <td>Password:</td> <td><input type="password" name="passwordInput"></td> </tr>
+                    <tr> <td>Repeat:</td>  <td><input type="password" name="passwordRepeat"></td> </tr>
+                    <tr><td><button type="submit">Register</button> </td> </tr>  
+                </table>
+        </div>
+    </body>
+
+<html>
+    
