--- a/views/start.html
+++ b/views/start.html
@@ -1,2 +1,10 @@
 <!--TODO Prototyp, PlayButton mit Abfrage ob PlayerInt
 -->
+
+<div class="main">
+    <h3>Home</h3>
+    <button type="submit">Play!</button>
+  </div>
+</body>
+
+</html>
