--- a/views/login.html
+++ b/views/login.html
@@ -1,1 +1,27 @@
 <!--TODO Prototyp-->
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <title>LettuceLogin</title>
+</head>
+
+<body>
+
+    <header class="header">
+        <h2>Login</h2>
+    </header>
+
+    <div class="main">
+        <form action="/userLogin" method="POST">
+            <table>
+                <tr><td>Username:</td> <td><input type="text" name="username"></td>
+                <tr><td>Password:</td> <td><input type="password" name="password"></td>
+                <tr><td><button type="submit">Login</button></td></tr>
+            </table>
+        </form>
+    </div>
+</body>
+
+</html>
