login mit startseite und game verbunden

--- a/views/start.html
+++ b/views/start.html
@@ -1,10 +1,19 @@
 <!--TODO Prototyp, PlayButton mit Abfrage ob PlayerInt
 -->
 
-<div class="main">
-    <h3>Home</h3>
-    <button type="submit">Play!</button>
-  </div>
-</body>
+<html>
+    <head>
+        <title>Start</title>
+    </head>
+    <body>
+
+        <h1>Herzlich Willkommen bei LettuceLetter </h1>
+        <form action="/play" method="POST">
+
+            <button type="submit">Play</button>
+
+        </form> 
+
+    </body>
 
 </html>
