--- a/views/chat.html
+++ b/views/chat.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="chat.css">
 	
 </head>
-
 <body>
 <header class="ScriptHeader">
     <div class="rt-container">
@@ -24,17 +23,16 @@
     </div>
 </header>
 
-<section>
-
-
-    
+<section>   
     <div class="rt-container">
           <div class="col-rt-12">
               <div class="Scriptcontent">
-              
+            
 <!-- partial:index.partial.html -->
 <section id="app">
-    <div class="container">
+  <div class="container">
+    <button type="button" class='primaryContained' onclick="openChat()">Open Chat</button>
+  
       <div class="row">
         <div class="col-6">
           <div class="comment">
@@ -44,22 +42,38 @@
           </div><!-- End row -->
       <div class="row">
         <div class="col-6">
-      <textarea type="text" class="input" placeholder="Write a comment" v-model="newItem" @keyup.enter="addItem()"></textarea>
+          <div class="chatbox" id="chatbox">
+            <h2>Commentary Box</h2>
+          <textarea type="text" class="input" placeholder="Write a comment" v-model="newItem" @keyup.enter="addItem()"></textarea>
           <button v-on:click="addItem()" class='primaryContained float-right' type="submit">Add Comment</button>
+          <button type="button" class='primaryContained float-right' class="btn btn-danger btn-lg btn-close" onclick="closeChat()">Close</button>
         </div><!-- End col -->
       </div><!--End Row -->
     </div><!--End Container -->
+
+    <script type="text/javascript">
+      function openChat() {
+        document.getElementById('chatbox').style.display='block';
+        $('.button.primaryContained').hide();
+      }
+      function closeChat() {
+        document.getElementById('chatbox').style.display='none';
+        $('.button.primaryContained').show();
+      }
+</script>
+    
   </section><!-- end App -->
 <!-- partial -->
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script  src="comment.js"></script>
-           
-    		</div>
+      
+    </div>
 		</div>
     </div>
 </section>
 
-	</body>
+</body> 
 </html>
