weitere Buttons auf startseite hinzugefügt

--- a/views/start.html
+++ b/views/start.html
@@ -13,6 +13,23 @@
             <button type="submit">Play</button>
 
         </form> 
+        <form action="/login" method="POST">
+
+            <button type="submit">Login</button>
+
+        </form> 
+        <form action="/register" method="POST">
+
+            <button type="submit">Registrieren</button>
+
+        </form> 
+        <!--
+        <form action="/gallery" method="POST">
+
+            <button type="submit">Alte Spiele</button>
+
+        </form> 
+        -->
 
     </body>
 
