--- a/views/start.html
+++ b/views/start.html
@@ -1,6 +1,6 @@
 <!--TODO Prototyp, PlayButton mit Abfrage ob PlayerInt
 -->
-
+<!DOCTYPE html>
 <html>
     <head>
         <title>Start</title>
@@ -13,12 +13,12 @@
             <button type="submit">Play</button>
 
         </form> 
-        <form action="/login" method="POST">
+        <form action="/login" method="GET">
 
             <button type="submit">Login</button>
 
         </form> 
-        <form action="/register" method="POST">
+        <form action="/register" method="GET">
 
             <button type="submit">Registrieren</button>
 
