--- a/views/upload_formular.html
+++ b/views/upload_formular.html
@@ -1,13 +1,11 @@
 <html>	
 	<head> 
-		<title>Bild Hochladen</title>
-
 <!-- Vont Chat head eingefügt-->
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Lettuce Letter - Comment Box</title>
+		<title>Lettuce Letter</title>
 		<meta name="author" content="Codeconvey" />
 		
 		<!-- Style CSS implementieren-->
@@ -50,8 +48,8 @@
     <div class="rt-container">
     	<div class="col-rt-12">
         	<div class="rt-heading">
-            	<h1>Lettuce Letter - Comment Box</h1>
-                <p>Kommentiere Bitte </p>
+            	<h1>Lettuce Letter - LETTUCE PLAY!</h1>
+                <p>Draw Something</p>
             </div>
         </div>
     </div>
@@ -121,8 +119,8 @@
 
 		<br>
 		<script src="drawOnCanvas.js"></script><br>
-		<button type="button" id="uploadButton">Bild auf Server speichern (hochladen)</button>
-		<br>
-		<a href="/bildzeigen">Gespeichertes Bild anzeigen</a>
+		<p></p>
+		<button type="button" id="uploadButton" class='primaryContained float-left'>Bild auf Server speichern (hochladen)</button>
+		<a href="/bildzeigen"><button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a>
 	</body>
 </html>
