css buttons in andere html/ejs seiten ergänzt

--- a/views/loginErfolgreich.ejs
+++ b/views/loginErfolgreich.ejs
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>LoginErfolgreich</title>
+
+        <!-- Style CSS implementieren-->
+		<link rel="stylesheet" href="chat.css">
     </head>
     <body>
         <h2>Herzlich Willkommen !</h2>
@@ -12,7 +15,7 @@
 
         <p> Wenn du Spielen möchtest: <br>
             <form action="/playAngemeldet" method="POST">
-                <button type="submit">Spielen</button>
+                <button type="submit" class='primaryContained float-right'>Spielen</button>
             </form> 
 
         </p>
