--- a/views/register.html
+++ b/views/register.html
@@ -4,6 +4,9 @@
 
     <head>
         <title>LettuceRegister</title> 
+
+        <!-- Style CSS implementieren-->
+		<link rel="stylesheet" href="chat.css">
     </head>
 
     <body>
@@ -16,7 +19,7 @@
                     <tr> <td>Username:</td> <td><input type="text" name="usernameInput"> </td> </tr>
                     <tr> <td>Password:</td> <td><input type="password" name="passwordInput"></td> </tr>
                     <tr> <td>Repeat:</td>  <td><input type="password" name="passwordRepeat"></td> </tr>
-                    <tr><td><button type="submit">Register</button> </td> </tr>  
+                    <tr><td><button type="submit" class='primaryContained float-right'>Register</button> </td> </tr>  
                 </table>
         </div>
     </body>
