--- a/views/gameFirst.html
+++ b/views/gameFirst.html
@@ -3,6 +3,8 @@
     <head>
         <title>Runde 1</title>
 
+        <!-- Style CSS implementieren-->
+		<link rel="stylesheet" href="chat.css">
     </head>
     <body>
         <h2>Was soll gezeichnet werden</h2>
@@ -10,7 +12,7 @@
         <form action="/Runde1" method="POST">
             Was sollen deine Mitspieler zeichnen ? <br>
             <input type="text"  name="wasZeichnen"><br><br>
-            <button type="submit">fertig</button>
+            <button type="submit" class='primaryContained float-right'>fertig</button>
         </form> 
     </body>
 </html>
