--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,9 @@
 
 <head>
     <title>LettuceLogin</title>
+
+    <!-- Style CSS implementieren-->
+		<link rel="stylesheet" href="chat.css">
 </head>
 
 <body>
@@ -18,7 +21,7 @@
             <table>
                 <tr><td>Username:</td> <td><input type="text" name="username"></td>
                 <tr><td>Password:</td> <td><input type="password" name="password"></td>
-                <tr><td><button type="submit">Login</button></td></tr>
+                <tr><td><button type="submit" class='primaryContained float-right'>Login</button></td></tr>
             </table>
         </form>
     </div>
