--- a/views/start.html
+++ b/views/start.html
@@ -4,24 +4,28 @@
 <html>
     <head>
         <title>Start</title>
+
+        <!-- Style CSS implementieren-->
+		<link rel="stylesheet" href="chat.css">
     </head>
     <body>
 
         <h1>Herzlich Willkommen bei LettuceLetter </h1>
         <form action="/play" method="POST">
 
-            <button type="submit">Play</button>
+            <button type="submit" class='primaryContained float-right'>Play</button>
 
         </form> 
-
+        <br>
         <form action="/login" method="GET">
 
-            <button type="submit">Login</button>
+            <button type="submit" class='primaryContained float-right'>Login</button>
 
         </form> 
+        <br>
         <form action="/register" method="GET">
 
-            <button type="submit">Registrieren</button>
+            <button type="submit" class='primaryContained float-right'>Registrieren</button>
 
         </form> 
         <!--
