set und getRound tut was es soll

--- a/views/start.html
+++ b/views/start.html
@@ -27,8 +27,14 @@
 
             <button type="submit" class='primaryContained float-right'>Registrieren</button>
 
-        </form> 
+        </form>
+
         <!--
+        <form action="/activegames" method="GET">
+
+            <button type="submit" class='primaryContained float-right'>Play</button>
+
+        </form> 
         <form action="/gallery" method="POST">
 
             <button type="submit">Alte Spiele</button>
