--- a/views/upload_formular.html
+++ b/views/upload_formular.html
@@ -115,12 +115,12 @@
 
 
 		<!-- Ab hier wieder Zeichnen -->
-
+		<!--getRound Funktion -> Anzeige-->
 
 		<br>
 		<script src="drawOnCanvas.js"></script><br>
 		<p></p>
-		<button type="button" id="uploadButton" class='primaryContained float-left'>Bild auf Server speichern (hochladen)</button>
+		<button type="button" id="uploadButton" class='primaryContained float-left'>Bild auf Server speichern (hochladen)</button> <!--setRound Funktion-->
 		<a href="/bildzeigen"><button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a>
 	</body>
 </html>
