Vorbereitung für Umstellung von hardcoded Runde auf variable Runden

--- a/views/activegames.ejs
+++ b/views/activegames.ejs
@@ -11,7 +11,7 @@
     </header>
 
     <div class="main">
-        <table border="1">
+        <table border="1"> <!--Tabelle muss sich auf DB berufen-->
                 <tr>
                     <th>Spiel</th>
                     <th>Runde</th>
