--- a/views/gameFirst.html
+++ b/views/gameFirst.html
@@ -9,7 +9,7 @@
     <body>
         <h2>Was soll gezeichnet werden</h2>
 
-        <form action="/Runde1" method="POST">
+        <form action="/RundeUngerade" method="POST">
             Was sollen deine Mitspieler zeichnen ? <br>
             <input type="text"  name="wasZeichnen"><br><br>
             <button type="submit" class='primaryContained float-right'>fertig</button>
