Rundensystem Spiel aufgesetzt

--- a/views/gameFirst.html
+++ b/views/gameFirst.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="chat.css">
     </head>
     <body>
-        <h2>Was soll gezeichnet werden</h2>
+        <h1>Neues Spiel!</h1>
+        <h2>Was soll gezeichnet werden?</h2>
 
         <form action="/Runde1" method="POST">
             Was sollen deine Mitspieler zeichnen ? <br>
