--- a/views/loginErfolgreich.ejs
+++ b/views/loginErfolgreich.ejs
@@ -17,9 +17,8 @@
             <form action="/playAngemeldet" method="POST">
                 <button type="submit" class='primaryContained float-right'>Spielen Neu</button>
             </form> 
-            <form action="/showRound" method="POST">
-                <input type="number" name="input_gameID">
-                <button type="submit">Laufende Runde</button>
+            <form action="/playLaufend" method="POST">
+                <button type="submit" class='primaryContained float-right'>Laufende Runde</button>
             </form>
 
         </p>
