--- a/views/game.html
+++ b/views/game.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="chat.css">
     </head>
     <body>
-        <h2>In welches Game willst du einsteigen?</h2>
+        <h2>In welches Game willst du einsteigen?</h2> <!--hier Liste der aktiven Games einfügen-->
         <form action="/showRound" method="POST">
             <input type="number" name="input_gameID">
             <button type="submit">Runde</button>
