--- a/views/loginErfolgreich.ejs
+++ b/views/loginErfolgreich.ejs
@@ -9,7 +9,7 @@
     <body>
         <h2>Herzlich Willkommen !</h2>
         <p>
-            Schön dich wiederzusehen
+            Schön dich zu sehen
             <%= benutzername %>
         </p>
 
