--- a/views/register.html
+++ b/views/register.html
@@ -14,7 +14,7 @@
             <h2>Register</h2>
         </header>
         <div class="main">
-            <form action="/newuser" method="POST">
+            <form action="/userRegister" method="POST">
                 <table>
                     <tr> <td>Username:</td> <td><input type="text" name="usernameInput"> </td> </tr>
                     <tr> <td>Password:</td> <td><input type="password" name="passwordInput"></td> </tr>
