--- a/views/loginErfolgreich.ejs
+++ b/views/loginErfolgreich.ejs
@@ -21,7 +21,8 @@
                 <button type="submit" class='primaryContained float-right'>Laufende Runde</button>
             </form>
 
-        </p>
+        </p>                res.send("Willkommen " + param_usernameInput);
+
 
     </body>
 </html>
