--- a/views/gameSchreiben.html
+++ b/views/gameSchreiben.html
@@ -131,7 +131,7 @@
 
 		<a href="/bildzeigen">
      
-      <button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a>
+      <button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a> <!--Bild wird nicht angezeigt-->
        <!-- <img src="<%=filename%>" alt="Bild">-->
         <form action="/gameSchreiben" method="POST">
             Was wurde hier gezeichnet: <br>
