Abruf ob Game aktiv

--- a/views/start.html
+++ b/views/start.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start</title>
+        <title>LettuceStart</title>
 
         <!-- Style CSS implementieren-->
 		<link rel="stylesheet" href="chat.css">
