--- a/views/game.html
+++ b/views/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <title>Lettuce Letter</title>
 
         <!-- Style CSS implementieren-->
 		<link rel="stylesheet" href="chat.css">
