--- a/views/game.html
+++ b/views/game.html
@@ -10,7 +10,7 @@
         <h2>In welches Game willst du einsteigen?</h2> <!--hier Liste der aktiven Games einfügen-->
         <form action="/showRound" method="POST">
             <input type="number" name="input_gameID">
-            <button type="submit">Game</button>
+            <button type="submit" class='primaryContained float-right'>Game</button>
         </form>
 
     </body>
