zeichnenFertig sollte endlich laufen

--- a/views/gameFirst.html
+++ b/views/gameFirst.html
@@ -12,7 +12,7 @@
 
         <form action="/Runde1" method="POST">
             Was sollen deine Mitspieler zeichnen ? <br>
-            <input type="text"  name="wasZeichnen1"><br><br>
+            <input type="text"  name="wasZeichnen"><br><br>
             <button type="submit" class='primaryContained float-right'>fertig</button>
         </form> 
     </body>
