--- a/views/start.html
+++ b/views/start.html
@@ -24,6 +24,18 @@
             <button type="submit" class='primaryContained float-right'>Registrieren</button>
 
         </form>
+        <br>
+        <br>
+        <br>
+        <br>
+        
+
+        <!-- Quick Galerie -->
+
+        <h3> Beispiele aus den letzten Spielen </h3>
+        <br>
+        <a href="/bildzeigen"><button type="button" class='primaryContained float-right'>Galerie</button></a>
+
 
         <!--<form action="/play" method="POST">
 
