--- a/views/start.html
+++ b/views/start.html
@@ -11,8 +11,12 @@
     <body>
 
         <h1>Herzlich Willkommen bei LettuceLetter </h1>
-         
         <br>
+
+            <img src="lettuce2.jpg" alt="lettuce" width="200" height="280">
+        <br>
+         
+        
         <form action="/login" method="GET">
 
             <button type="submit" class='primaryContained float-right'>Login</button>
@@ -26,10 +30,7 @@
         </form>
         <br>
         <br>
-        <br>
-        <br>
         
-
         <!-- Quick Galerie -->
 
         <h3> Beispiele aus den letzten Spielen </h3>
