Bildanzeige funktioniert weiter nicht, trotz komplettem Pfad

--- a/views/gameSchreiben.ejs
+++ b/views/gameSchreiben.ejs
@@ -131,8 +131,7 @@
 
 		<a href="/bildzeigen">
      
-      <button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a> <!--Bild wird nicht angezeigt-->
-       <!-- <img src="<%=filename%>" alt="Bild">-->
+      <button type="button" class='primaryContained float-right'>Gespeichertes Bild anzeigen</button></a>
 
        <p></p>
     
