--- a/views/finishedGame.ejs
+++ b/views/finishedGame.ejs
@@ -41,11 +41,11 @@
             <table border="0">
                     <tr><td>Spiel Nummer</td><td><%= GameRow.gameID %></td></tr>
                     <tr><td>Runde 1</td><td><%= GameRow.round1%></td></tr>
-                    <tr><td>Runde 2</td><td><img src="<%=Dir%>/images/<%= GameRow.round2%>" alt="Bild"></td></tr> <!--Bild anzeigen-->
+                    <tr><td>Runde 2</td><td><img src="<%= GameRow.round2%>" alt="Bild"></td></tr> <!--Bild anzeigen-->
                     <tr><td>Runde 3</td><td><%= GameRow.round3%></td></tr>
-                    <tr><td>Runde 4</td><td><img src="<%=Dir%>/images/<%= GameRow.round4%>" alt="Bild"></td></tr> <!--Bild anzeigen-->  
+                    <tr><td>Runde 4</td><td><img src="<%= GameRow.round4%>" alt="Bild"></td></tr> <!--Bild anzeigen-->  
                     <tr><td>Runde 5</td><td><%= GameRow.round5%></td></tr>    
-                    <tr><td>Runde 6</td><td><img src="<%=Dir%>/images/<%= GameRow.round6%>" alt="Bild"></td></tr> <!--Bild anzeigen-->
+                    <tr><td>Runde 6</td><td><img src="<%= GameRow.round6%>" alt="Bild"></td></tr> <!--Bild anzeigen-->
                     <tr><td>Runde 7</td><td><%= GameRow.round7%></td></tr>
             </table> 
         </p>
