Unnötige Kommentare entfernt

--- a/views/gameSchreiben.ejs
+++ b/views/gameSchreiben.ejs
@@ -1,6 +1,6 @@
 <html>	
 	<head> 
-<!-- Vont Chat head eingefügt-->
+<!-- Von Chat head eingefügt-->
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="chat.css">
 		
 
-<!-- Ab hier  wieder Zeichnen-->
+<!-- Ab hier  wieder Zeichnen -->
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
