--- a/views/finishedRound.ejs
+++ b/views/finishedRound.ejs
@@ -2,7 +2,7 @@
 
 	<head> 
 
-<!-- Vont Chat head eingefügt-->
+<!-- Von Chat head eingefügt-->
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
